fixed targeting of cards evt listener

--- a/quiz.css
+++ b/quiz.css
@@ -19,6 +19,12 @@ article {
 .textBox {
 }
 
-.carElement {
+.carCards {
+	display: inline-block;
+	max-width: 30%;
+}
 
+.firstStyle {
+	border-width: 5px;
+	background-color: lightgreen;
 }
