passed args to changeBorder

--- a/quiz.css
+++ b/quiz.css
@@ -26,10 +26,10 @@ article {
 	margin-left: 2%;
 }
 
-/*.firstStyle {
+.firstStyle {
 	border-width: 5px;
 	background-color: lightgreen;
-}*/
+}
 
 .secondStyle {
 	border-width: 10px;
