--- a/quiz.css
+++ b/quiz.css
@@ -1,5 +1,5 @@
 body {
-	background: slategrey;
+	background-color: #95a584;
 }
 
 h1 {
@@ -10,10 +10,15 @@ h1 {
 	border: 1px solid black;
 	text-align: center;
 	margin: 2%;
+	background-color: #f4aa42;
+	justify-content: space-between;
 }
 
 .navbar {
-	background-color: brown;
+	background-image: url("https://i.kinja-img.com/gawker-media/image/upload/s--QUOdYlDz--/c_scale,fl_progressive,q_80,w_800/1482240233981880130.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 250px;
 }
 
 .firstStyle {
